Fixed message not showing at login
Added padding to body because of navbar overlapping the alert

--- a/WEBDEVE-Project/WebContent/styles.css
+++ b/WEBDEVE-Project/WebContent/styles.css
@@ -9,6 +9,7 @@
 
 body {
     background: #fbfbfb;
+    padding-top: 10px;
 }
 * {
     font-family: "Open Sans", sans-serif;
